  Changes:
    - Clicking on a GPS tag in chat no longer opens pinged hex cores.
    - Changed Sentient Spider inventory size to 120 (50% higher than spidertron).
  Balancing:
    - Made the Lazy Looter quest reward give a rare [item=spidertron] instead of normal, as well as equipment to go with it.
  Ease of use:
    - Clicking on the "find trade" button in the trade overview now immediately takes your remote view to the relevant hex core and opens it up for you.
    - Output loaders of hex cores can now be clicked directly to set their filters rather than having to go through the hex core interface.
---------------------------------------------------------------------------------------------------
Version: 0.4.3
Date: 6/6/25
  Major Features:
    - Added dungeons.
  Features:
    - Added more quests and rewards.
    - Added plague rockets ammo, technology, recipe, smoke/particle effect, and catalog entry. (used by Gleba dungeon turrets)
    - Added magmatic bullets ammo, technology, recipe, special effect, and catalog entry. (used by Vulcanus dungeon turrets)
  Changes:
    - [item=rocket] and [item=explosive-rocket] are now also craftable in [entity=biochamber].
    - [item=firearm-magazine] and [item=piercing-rounds-magazine] are now also craftable in [entity=foundry].
    - Demolisher tech no longer requires production science like most other military techs.
  Balancing:
    - Lower-valued trades are now more common in the more distant hexes from spawn on all planets.
    - Fewer of the more distant hexes than the ones near spawn have resources, on all planets.
  Optimizations:
    - Greatly optimized hex generation and overall UPS.
    - Further optimized hex generation ahead of time in uncharted areas (for charting at fast speeds).
---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: 1/6/25
  Features:
    - Added many more quests and rewards.