@@ -7,8 +7,9 @@ hexaprism=Hexaprism
 claim-tool=Claim Hexes
 delete-core-tool=Delete Hex Cores
 tesla-discharge-defense-equipment=Tesla discharge defense
-tesla-destroyer=Tesla destroyer
+disintegrator-capsule=Disintegrator capsule
 tesla-destroyer-capsule=Tesla destroyer capsule
+detonator-capsule=Detonator capsule
 demolisher-capsule=Demolisher capsule
 hexa-speed-module=[color=128,16,0]Hexa Speed Module[.color]
 hexa-productivity-module=[color=128,16,0]Hexa Productivity Module[.color]
@@ -28,9 +29,11 @@ hexaprism-coin=[font=heading-1][color=blue]TIER 4 COIN[.color][.font]\nCan be tr
 hexaprism=A crystalline shard of pure hexagonal energy. Only the most experienced engineer can make use of this.
 claim-tool=Claim all hex cores in the selected area.
 delete-core-tool=Delete all hex cores in the selected area.
+disintegrator-capsule=Deploys disintegrators to melt through your obstacles.
 tesla-discharge-defense-equipment=Damages, pushes back and stuns nearby enemies automatically.
-tesla-destroyer=One of the more advanced combat robots. Follows the player and shoots arcing bolts of electricity at nearby enemies.
-demolisher-capsule=Deploys demolishers. The good kinds.
+tesla-destroyer-capsule=One of the more advanced combat robots. Follows the player and shoots arcing bolts of electricity at nearby enemies.
+detonator-capsule=Deploys detonators to blow everything off the face of the planet.
+demolisher-capsule=Deploys demolishers, which are unironically strong versus demolishers of all sizes.
 sentient-spider=(WORK IN PROGRESS)\nAlthough they don't do anything yet, you can build these now. They'll wake up later.\n\n[font=heading-2][color=yellow]This spidertron has undergone an artificial imbuement of consciousness and spiritual energy. Her superintelligence, benignity, and fascination with industry leads her to welcome your presence into her world of Factorio. The factory must grow.[.color][.font]
 plague-rocket=Significantly more potent than [item=poison-capsule].
 magmatic-rounds-magazine=Put everything into the incinerator.
@@ -41,6 +44,8 @@ hex-core-loader=Loader
 hexic-transport-belt=Hexic transport belt
 hexic-underground-belt=Hexic underground belt
 hexic-splitter=Hexic splitter
+disintegrator=Disintegrator
+detonator=Detonator
 demolisher=Demolisher
 sentient-spider=Sentient Spider
 hexaprism=Hexaprism
@@ -56,6 +61,8 @@ plague-cloud=Plague cloud
 
 [entity-description]
 hex-core=The core of the hex, able to make item trades. Link a belt into the left tunnel. Link a belt out of the right tunnel.
+disintegrator=A helpful bot for clearing out large swarms of enemies.
+detonator=It doesn't only detonate things. It is also a biological superweapon.
 demolisher=Swiftly decimates everything in its path.
 sentient-spider=(WORK IN PROGRESS)\nAlthough they don't do anything yet, you can build these now. They'll wake up later.\n\n[font=heading-2][color=yellow]This spidertron has undergone an artificial imbuement of consciousness and spiritual energy. Her superintelligence, benignity, and fascination with industry leads her to welcome your presence into her world of Factorio. The factory must grow.[.color][.font]
 
@@ -63,6 +70,8 @@ sentient-spider=(WORK IN PROGRESS)\nAlthough they don't do anything yet, you can
 hexic-logistics=Hexic logistics
 hextreme-quality=Hextreme quality
 hexa-modules=Hexa modules
+disintegrator=Disintegrator
+detonator=Detonator
 demolisher=Demolisher
 sentient-spider=Sentient Spider
 energized-thruster-fuel=Energized thruster fuel
@@ -74,6 +83,8 @@ plague-rocket=Plague rocket
 hexic-logistics=The most impressive belt system.
 hextreme-quality=Unlock the secrets of the factory.
 hexa-modules=Pushing the iron gear wheels [img=item.iron-gear-wheel] beyond their limits.
+disintegrator=Make use of, quite literally, real firepower.
+detonator=Explode and make deathly sick!
 demolisher=What happens when you attach the most powerful weapon to the most versatile machine?
 sentient-spider=This is their world, and you're just living in it. Good thing they're on your side, though. Could you imagine if they got a kick out of griefing you?
 energized-thruster-fuel=Give your spaceships the zoomies.
